[FE] Fix path image in style.css

--- a/index.html
+++ b/index.html
@@ -1172,7 +1172,7 @@
     </div>
 
     <!-- Popup -->
-    <div class="popup show">
+    <div class="popup">
       <div class="popup__content">
         <div class="popup__content-header">
           <div class="content-header__close">
@@ -1569,7 +1569,7 @@
           </div>
 
           <!-- Recruit -->
-          <div class="content-body__form-share popup__recruit show">
+          <div class="content-body__form-share popup__recruit">
             <div class="form-share__image">
               <img
                 src="./assets/images/popup/pc-img-hero2.png"
